# residue-base-energy

./: .gitignore  README.md  environment.gpu.yml  nohup.out  pyproject.toml  runbook.md  runbook_broad_modality_ablation.md  runbook_esm_structure_ablation.md  runbook_family_ets.md
configs/: broad_aa_only_v1.yaml  broad_esm_only_v1.yaml  broad_full_v1.yaml  broad_structure_only_v1.yaml  dna_v1.yaml  dna_v1_contact.yaml  ets_family_esm_only_v1.yaml  ets_family_pwm_only_v1.yaml  ets_family_structure_only_v1.yaml  ets_family_v1.yaml
docs/: README.md  benchmark_gap_and_plan.md  code_structure.md  current_problem_solution_plan.md  current_status.md  deeppbs_data_alignment.md  idea_from_prior_work.md  method.md  prepare_failure_reason_analysis.md  rbe_experiment_plan.md
metadata/: README.md  samples.example.tsv
scripts/: ablate_family_mechanism.py  align_deeppbs_predictions_for_rbe_eval.py  calibrate_family_residual.py  create_toy_npz.py  download_motif_sources.py  evaluate_cluster_methods.py  evaluate_family_methods.py  evaluate_pwm.sh  import_deeppbs_source_manifest.py  predict.sh  predict_family_baselines.py  prepare_cluster_benchmark.py  prepare_deeppbs_curated.py  prepare_deeppbs_shared_cache.py  prepare_deeppbs_smoke.py  prepare_family_benchmark.py  prepare_source_manifest.py  process_complex.sh  run_deeppbs_partial_pipeline.sh  train.sh
tests/: test_canonical_prediction.py  test_canonical_sample.py  test_cluster_benchmark.py  test_cluster_evaluation.py  test_deeppbs_curated_resources.py  test_download_motif_sources.py  test_evaluate_manifest.py  (+13 more)
(+337 files in other folders)
